<resources>
    <string name="app_name">GeoTalk</string>
    <string name="CONTEXT_TEXT_PRIMLANG">Language</string>
    <string name="TEXT_PHRASE_ITEM_SOURCE">Sample phrase in source language</string>
    <string name="TEXT_PHRASE_ITEM_TARGET">Sample phrase in target language</string>
    <string name="TEXT_CATEGORY">Category</string>
    <string name="TITLE_FILTER">Filter</string>
    <string name="TITLE_PHRASES">Expressions</string>
    <string name="TEXT_CATEGORIES">Categories</string>
    <string name="TITLE_GENERAL">General</string>
    <string name="TITLE_Context">Context</string>
    <string name="TITLE_SAVED">Saved</string>
    <string name="title_activity_bottom_nav">GeoTalk</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="TITLE_Translate">Translate</string>
    <string name="TITLE_PROFILE">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="filters">
        <item>Most Recent</item>
        <item>Most Popular</item>
    </string-array>
    <string name="TITLE_CATEGORIES">Categories</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="PhotoName">Denny Min</string>
    <string name="Source_Lang_Header">I speak and understand</string>
    <string name="Target_Lang_Header">Target language</string>
    <string name="Target_Lang_Blurb">automatically assign a language to translate to</string>
    <string-array name="fromlanguages">
        <item>English</item>
        <item>Spanish</item>
        <item>Japanese</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
        <item>Korean</item>
        <item>French</item>
        <item>Italian</item>
        <item>Russian</item>
    </string-array>
    <string-array name="tolanguages">
        <item>Spanish</item>
        <item>Japanese</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
        <item>Korean</item>
        <item>French</item>
        <item>Italian</item>
        <item>Russian</item>
        <item>English</item>
    </string-array>
    <string-array name="fromlanguagesProfile">
        <item>English</item>
    </string-array>
    <string-array name="tolanguagesProfile">
        <item>Korean</item>
    </string-array>
    <string name="title_activity_translate">Translate</string>
    <string name="Location">Location</string>
    <string name="LocationHolder">Unknown</string>
</resources>