<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/General"
        android:icon="@drawable/home_solid"
        android:title="@string/TITLE_GENERAL" />
    <item
        android:id="@+id/Context"
        android:icon="@drawable/location_solid"
        android:title="@string/TITLE_Context" />
    <item
        android:id="@+id/Translate"
        android:icon="@drawable/translate_solid"
        android:title="@string/TITLE_Translate" />
    <item
        android:id="@+id/Saved"
        android:icon="@drawable/saved_solid"
        android:title="@string/TITLE_SAVED" />
    <item
        android:id="@+id/Profile"
        android:icon="@drawable/profile_solid"
        android:title="@string/TITLE_PROFILE" />
</menu>